test/sema/positive/movesema/call_move_out_in.impala
fn foo(a: ~float) -> ~float {
    let b = a;
    b
}

fn f() -> () {
    let a = ~1.3f;
    let b = foo(a);
    let c = b;
}
