test/sema/negative/movesema/call_move.impala
fn foo(a: ~int) -> () {
    let b = a;
}

fn f() -> () {
    let a = ~5;
    foo(a);
    let b = a;
}
